apps/bjj-dapp-web/dev/networking/routes/httproute-bjj-dapp-web-dev-redirect.yaml
# HTTPRoute for HTTP to HTTPS redirect for bjj-dapp-web dev.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-bjj-dapp-web-dev-redirect
  namespace: bjj-dapp-web
spec:
  parentRefs:
  - name: dev-gateway-bjj-dapp-web-dev
    sectionName: http
  hostnames:
  - bjj.cardano.vip
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
